// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox 1`] = `
<div style="display: grid; gap: 2rem;">
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <ds-field>
      <input
        id="components-input--checkbox-sm-default"
        type="checkbox"
        name="sm-default"
      >
      <label data-weight="medium">
        Default
      </label>
    </ds-field>
    <ds-field>
      <input
        id="components-input--checkbox-sm-checked"
        type="checkbox"
        checked
        name="sm-checked"
      >
      <label data-weight="medium">
        Checked
      </label>
    </ds-field>
    <ds-field>
      <input
        data-indeterminate="true"
        id="components-input--checkbox-sm-indeterminate"
        type="checkbox"
        name="sm-indeterminate"
      >
      <label data-weight="medium">
        Indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--checkbox-sm-disabled"
        type="checkbox"
        name="sm-disabled"
      >
      <label data-weight="medium">
        Disabled
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--checkbox-sm-disabled-checked"
        type="checkbox"
        checked
        name="sm-disabled-checked"
      >
      <label data-weight="medium">
        Disabled checked
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        data-indeterminate="true"
        id="components-input--checkbox-sm-disabled-indeterminate"
        type="checkbox"
        name="sm-disabled-indeterminate"
      >
      <label data-weight="medium">
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--checkbox-sm-invalid"
        type="checkbox"
        name="sm-invalid"
      >
      <label data-weight="medium">
        Invalid
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--checkbox-sm-invalid-checked"
        type="checkbox"
        checked
        name="sm-invalid-checked"
      >
      <label data-weight="medium">
        Invalid checked
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        data-indeterminate="true"
        id="components-input--checkbox-sm-invalid-indeterminate"
        type="checkbox"
        name="sm-invalid-indeterminate"
      >
      <label data-weight="medium">
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--checkbox-sm-read-only"
        type="checkbox"
        name="sm-read-only"
      >
      <label data-weight="medium">
        Read-only
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--checkbox-sm-read-only-checked"
        type="checkbox"
        checked
        name="sm-read-only-checked"
      >
      <label data-weight="medium">
        Read-only checked
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        data-indeterminate="true"
        id="components-input--checkbox-sm-read-only-indeterminate"
        type="checkbox"
        name="sm-read-only-indeterminate"
      >
      <label data-weight="medium">
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <ds-field>
      <input
        id="components-input--checkbox-md-default"
        type="checkbox"
        name="md-default"
      >
      <label data-weight="medium">
        Default
      </label>
    </ds-field>
    <ds-field>
      <input
        id="components-input--checkbox-md-checked"
        type="checkbox"
        checked
        name="md-checked"
      >
      <label data-weight="medium">
        Checked
      </label>
    </ds-field>
    <ds-field>
      <input
        data-indeterminate="true"
        id="components-input--checkbox-md-indeterminate"
        type="checkbox"
        name="md-indeterminate"
      >
      <label data-weight="medium">
        Indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--checkbox-md-disabled"
        type="checkbox"
        name="md-disabled"
      >
      <label data-weight="medium">
        Disabled
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--checkbox-md-disabled-checked"
        type="checkbox"
        checked
        name="md-disabled-checked"
      >
      <label data-weight="medium">
        Disabled checked
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        data-indeterminate="true"
        id="components-input--checkbox-md-disabled-indeterminate"
        type="checkbox"
        name="md-disabled-indeterminate"
      >
      <label data-weight="medium">
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--checkbox-md-invalid"
        type="checkbox"
        name="md-invalid"
      >
      <label data-weight="medium">
        Invalid
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--checkbox-md-invalid-checked"
        type="checkbox"
        checked
        name="md-invalid-checked"
      >
      <label data-weight="medium">
        Invalid checked
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        data-indeterminate="true"
        id="components-input--checkbox-md-invalid-indeterminate"
        type="checkbox"
        name="md-invalid-indeterminate"
      >
      <label data-weight="medium">
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--checkbox-md-read-only"
        type="checkbox"
        name="md-read-only"
      >
      <label data-weight="medium">
        Read-only
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--checkbox-md-read-only-checked"
        type="checkbox"
        checked
        name="md-read-only-checked"
      >
      <label data-weight="medium">
        Read-only checked
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        data-indeterminate="true"
        id="components-input--checkbox-md-read-only-indeterminate"
        type="checkbox"
        name="md-read-only-indeterminate"
      >
      <label data-weight="medium">
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <ds-field>
      <input
        id="components-input--checkbox-lg-default"
        type="checkbox"
        name="lg-default"
      >
      <label data-weight="medium">
        Default
      </label>
    </ds-field>
    <ds-field>
      <input
        id="components-input--checkbox-lg-checked"
        type="checkbox"
        checked
        name="lg-checked"
      >
      <label data-weight="medium">
        Checked
      </label>
    </ds-field>
    <ds-field>
      <input
        data-indeterminate="true"
        id="components-input--checkbox-lg-indeterminate"
        type="checkbox"
        name="lg-indeterminate"
      >
      <label data-weight="medium">
        Indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--checkbox-lg-disabled"
        type="checkbox"
        name="lg-disabled"
      >
      <label data-weight="medium">
        Disabled
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--checkbox-lg-disabled-checked"
        type="checkbox"
        checked
        name="lg-disabled-checked"
      >
      <label data-weight="medium">
        Disabled checked
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        data-indeterminate="true"
        id="components-input--checkbox-lg-disabled-indeterminate"
        type="checkbox"
        name="lg-disabled-indeterminate"
      >
      <label data-weight="medium">
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--checkbox-lg-invalid"
        type="checkbox"
        name="lg-invalid"
      >
      <label data-weight="medium">
        Invalid
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--checkbox-lg-invalid-checked"
        type="checkbox"
        checked
        name="lg-invalid-checked"
      >
      <label data-weight="medium">
        Invalid checked
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        data-indeterminate="true"
        id="components-input--checkbox-lg-invalid-indeterminate"
        type="checkbox"
        name="lg-invalid-indeterminate"
      >
      <label data-weight="medium">
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--checkbox-lg-read-only"
        type="checkbox"
        name="lg-read-only"
      >
      <label data-weight="medium">
        Read-only
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--checkbox-lg-read-only-checked"
        type="checkbox"
        checked
        name="lg-read-only-checked"
      >
      <label data-weight="medium">
        Read-only checked
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        data-indeterminate="true"
        id="components-input--checkbox-lg-read-only-indeterminate"
        type="checkbox"
        name="lg-read-only-indeterminate"
      >
      <label data-weight="medium">
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<div style="display: flex; gap: var(--ds-size-2); align-items: end; width: 100%;">
  <ds-field>
    <label
      data-weight="medium"
      for="components-input--controlled"
    >
      Fullt navn
    </label>
    <input
      id="components-input--controlled"
      type="text"
      value
    >
  </ds-field>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
`;

exports[`Html Size 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-input--html-size"
  >
    Input with size
  </label>
  <input
    size="10"
    id="components-input--html-size"
    type="text"
  >
</ds-field>
`;

exports[`Input Types 1`] = `
<ds-field data-clickdelegatefor="components-input--input-types-checkbox">
  <label
    data-weight="medium"
    for="components-input--input-types-checkbox"
  >
    Checkbox
  </label>
  <input
    id="components-input--input-types-checkbox"
    type="checkbox"
    checked
  >
</ds-field>
<ds-field data-clickdelegatefor="components-input--input-types-radio">
  <label
    data-weight="medium"
    for="components-input--input-types-radio"
  >
    Radio
  </label>
  <input
    id="components-input--input-types-radio"
    type="radio"
    checked
  >
</ds-field>
<ds-field data-clickdelegatefor="components-input--input-types-switch">
  <label
    data-weight="medium"
    for="components-input--input-types-switch"
  >
    Switch
  </label>
  <input
    role="switch"
    id="components-input--input-types-switch"
    type="checkbox"
    checked
  >
</ds-field>
`;

exports[`Preview 1`] = `
<input
  aria-invalid="false"
  aria-label="input"
  id="components-input--preview"
  type="text"
  checked
  name="inputs"
>
`;

exports[`Radio 1`] = `
<div>
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Small
    </h2>
    <ds-field>
      <input
        id="components-input--radio-sm-Default"
        type="radio"
        name="sm-Default"
      >
      <label data-weight="medium">
        Default
      </label>
    </ds-field>
    <ds-field>
      <input
        id="components-input--radio-sm-Checked"
        type="radio"
        checked
        name="sm-Checked"
      >
      <label data-weight="medium">
        Checked
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--radio-sm-Disabled"
        type="radio"
        name="sm-Disabled"
      >
      <label data-weight="medium">
        Disabled
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--radio-sm-Disabled"
        type="radio"
        checked
        name="sm-Disabled"
      >
      <label data-weight="medium">
        Disabled checked
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--radio-sm-Invalid"
        type="radio"
        name="sm-Invalid"
      >
      <label data-weight="medium">
        Invalid
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--radio-sm-Invalid"
        type="radio"
        checked
        name="sm-Invalid"
      >
      <label data-weight="medium">
        Invalid checked
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--radio-sm-Read-only"
        type="radio"
        name="sm-Read-only"
      >
      <label data-weight="medium">
        Read-only
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--radio-sm-Read-only"
        type="radio"
        checked
        name="sm-Read-only"
      >
      <label data-weight="medium">
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Medium
    </h2>
    <ds-field>
      <input
        id="components-input--radio-md-Default"
        type="radio"
        name="md-Default"
      >
      <label data-weight="medium">
        Default
      </label>
    </ds-field>
    <ds-field>
      <input
        id="components-input--radio-md-Checked"
        type="radio"
        checked
        name="md-Checked"
      >
      <label data-weight="medium">
        Checked
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--radio-md-Disabled"
        type="radio"
        name="md-Disabled"
      >
      <label data-weight="medium">
        Disabled
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--radio-md-Disabled"
        type="radio"
        checked
        name="md-Disabled"
      >
      <label data-weight="medium">
        Disabled checked
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--radio-md-Invalid"
        type="radio"
        name="md-Invalid"
      >
      <label data-weight="medium">
        Invalid
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--radio-md-Invalid"
        type="radio"
        checked
        name="md-Invalid"
      >
      <label data-weight="medium">
        Invalid checked
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--radio-md-Read-only"
        type="radio"
        name="md-Read-only"
      >
      <label data-weight="medium">
        Read-only
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--radio-md-Read-only"
        type="radio"
        checked
        name="md-Read-only"
      >
      <label data-weight="medium">
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Large
    </h2>
    <ds-field>
      <input
        id="components-input--radio-lg-Default"
        type="radio"
        name="lg-Default"
      >
      <label data-weight="medium">
        Default
      </label>
    </ds-field>
    <ds-field>
      <input
        id="components-input--radio-lg-Checked"
        type="radio"
        checked
        name="lg-Checked"
      >
      <label data-weight="medium">
        Checked
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--radio-lg-Disabled"
        type="radio"
        name="lg-Disabled"
      >
      <label data-weight="medium">
        Disabled
      </label>
    </ds-field>
    <ds-field>
      <input
        disabled
        id="components-input--radio-lg-Disabled"
        type="radio"
        checked
        name="lg-Disabled"
      >
      <label data-weight="medium">
        Disabled checked
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--radio-lg-Invalid"
        type="radio"
        name="lg-Invalid"
      >
      <label data-weight="medium">
        Invalid
      </label>
    </ds-field>
    <ds-field>
      <input
        aria-invalid="true"
        id="components-input--radio-lg-Invalid"
        type="radio"
        checked
        name="lg-Invalid"
      >
      <label data-weight="medium">
        Invalid checked
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--radio-lg-Read-only"
        type="radio"
        name="lg-Read-only"
      >
      <label data-weight="medium">
        Read-only
      </label>
    </ds-field>
    <ds-field>
      <input
        readonly
        id="components-input--radio-lg-Read-only"
        type="radio"
        checked
        name="lg-Read-only"
      >
      <label data-weight="medium">
        Read-only checked
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Switch 1`] = `
<div style="display: grid; gap: 2rem;">
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <ds-field data-clickdelegatefor="components-input--switch-sm-default">
      <input
        role="switch"
        id="components-input--switch-sm-default"
        type="checkbox"
        name="sm-default"
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-default"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-sm-checked">
      <input
        role="switch"
        id="components-input--switch-sm-checked"
        type="checkbox"
        checked
        name="sm-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-checked"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-sm-disabled">
      <input
        role="switch"
        disabled
        id="components-input--switch-sm-disabled"
        type="checkbox"
        name="sm-disabled"
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-disabled"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-sm-disabled-checked">
      <input
        role="switch"
        disabled
        id="components-input--switch-sm-disabled-checked"
        type="checkbox"
        checked
        name="sm-disabled-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-disabled-checked"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-sm-read-only">
      <input
        role="switch"
        readonly
        id="components-input--switch-sm-read-only"
        type="checkbox"
        name="sm-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-read-only"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-sm-read-only-checked">
      <input
        role="switch"
        readonly
        id="components-input--switch-sm-read-only-checked"
        type="checkbox"
        checked
        name="sm-read-only-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-read-only-checked"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <ds-field data-clickdelegatefor="components-input--switch-md-default">
      <input
        role="switch"
        id="components-input--switch-md-default"
        type="checkbox"
        name="md-default"
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-default"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-md-checked">
      <input
        role="switch"
        id="components-input--switch-md-checked"
        type="checkbox"
        checked
        name="md-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-checked"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-md-disabled">
      <input
        role="switch"
        disabled
        id="components-input--switch-md-disabled"
        type="checkbox"
        name="md-disabled"
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-disabled"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-md-disabled-checked">
      <input
        role="switch"
        disabled
        id="components-input--switch-md-disabled-checked"
        type="checkbox"
        checked
        name="md-disabled-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-disabled-checked"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-md-read-only">
      <input
        role="switch"
        readonly
        id="components-input--switch-md-read-only"
        type="checkbox"
        name="md-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-read-only"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-md-read-only-checked">
      <input
        role="switch"
        readonly
        id="components-input--switch-md-read-only-checked"
        type="checkbox"
        checked
        name="md-read-only-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-read-only-checked"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <ds-field data-clickdelegatefor="components-input--switch-lg-default">
      <input
        role="switch"
        id="components-input--switch-lg-default"
        type="checkbox"
        name="lg-default"
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-default"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-lg-checked">
      <input
        role="switch"
        id="components-input--switch-lg-checked"
        type="checkbox"
        checked
        name="lg-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-checked"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-lg-disabled">
      <input
        role="switch"
        disabled
        id="components-input--switch-lg-disabled"
        type="checkbox"
        name="lg-disabled"
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-disabled"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-lg-disabled-checked">
      <input
        role="switch"
        disabled
        id="components-input--switch-lg-disabled-checked"
        type="checkbox"
        checked
        name="lg-disabled-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-disabled-checked"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-lg-read-only">
      <input
        role="switch"
        readonly
        id="components-input--switch-lg-read-only"
        type="checkbox"
        name="lg-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-read-only"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="components-input--switch-lg-read-only-checked">
      <input
        role="switch"
        readonly
        id="components-input--switch-lg-read-only-checked"
        type="checkbox"
        checked
        name="lg-read-only-checked"
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-read-only-checked"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Text 1`] = `
<div>
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <ds-field>
      <label data-weight="medium">
        Default
      </label>
      <input
        data-size="sm"
        id="components-input--text-sm-default"
        type="text"
        value="Value"
        name="sm-default"
      >
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Disabled
      </label>
      <input
        disabled
        data-size="sm"
        id="components-input--text-sm-disabled"
        type="text"
        value="Value"
        name="sm-disabled"
      >
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Invalid
      </label>
      <input
        aria-invalid="true"
        data-size="sm"
        id="components-input--text-sm-invalid"
        type="text"
        value="Value"
        name="sm-invalid"
      >
      <p data-field="validation">
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Read-only
      </label>
      <input
        readonly
        data-size="sm"
        id="components-input--text-sm-read-only"
        type="text"
        value="Value"
        name="sm-read-only"
      >
    </ds-field>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <ds-field>
      <label data-weight="medium">
        Default
      </label>
      <input
        data-size="md"
        id="components-input--text-md-default"
        type="text"
        value="Value"
        name="md-default"
      >
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Disabled
      </label>
      <input
        disabled
        data-size="md"
        id="components-input--text-md-disabled"
        type="text"
        value="Value"
        name="md-disabled"
      >
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Invalid
      </label>
      <input
        aria-invalid="true"
        data-size="md"
        id="components-input--text-md-invalid"
        type="text"
        value="Value"
        name="md-invalid"
      >
      <p data-field="validation">
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Read-only
      </label>
      <input
        readonly
        data-size="md"
        id="components-input--text-md-read-only"
        type="text"
        value="Value"
        name="md-read-only"
      >
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <ds-field>
      <label data-weight="medium">
        Default
      </label>
      <input
        data-size="lg"
        id="components-input--text-lg-default"
        type="text"
        value="Value"
        name="lg-default"
      >
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Disabled
      </label>
      <input
        disabled
        data-size="lg"
        id="components-input--text-lg-disabled"
        type="text"
        value="Value"
        name="lg-disabled"
      >
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Invalid
      </label>
      <input
        aria-invalid="true"
        data-size="lg"
        id="components-input--text-lg-invalid"
        type="text"
        value="Value"
        name="lg-invalid"
      >
      <p data-field="validation">
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label data-weight="medium">
        Read-only
      </label>
      <input
        readonly
        data-size="lg"
        id="components-input--text-lg-read-only"
        type="text"
        value="Value"
        name="lg-read-only"
      >
    </ds-field>
  </div>
</div>
`;
